updated todo.txt list

--- a/todo.txt
+++ b/todo.txt
@@ -7,5 +7,5 @@ https://medium.com/@christianjbolus/how-to-make-a-button-with-a-gradient-border-
 4. Media queries for tablet and mobile
 
 5. Education page
-6. Testimonials section
+6. Testimonials section - import from js projects repo/collate BC reviews
 7. Favicon generator
